fix(foxy-theme-overrides): update sidecart selector for improved overflow handling

--- a/foxy-styles/foxy-theme-overrides.css
+++ b/foxy-styles/foxy-theme-overrides.css
@@ -378,7 +378,7 @@
   height: 100%;
 }
 
-[data-fc-sidecart] {
+[data-fc-with-sidecart="reveal"].cart-visible--animation-complete [data-fc-sidecart] {
   overflow-y: inherit;
 }
 
